--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="#">
+        <a class="navbar-item" href="https://job-hunter-toolkit.github.io">
           <strong>Job Hunter Toolkit</strong>
         </a>
 
