--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
 
 <script>
 
+navigator.serviceWorker && navigator.serviceWorker.register('./sw.js').then(function(registration) {
+  console.log('Excellent, registered with scope: ', registration.scope);
+});
+
 let jobPostings = [];
 let subet       = [];
 
