--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Job Hunter Toolkit</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#3273dc"/>
+    <link rel="manifest" href="manifest.json"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
