--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div v-if="item.title && item.company && item.title && item.location">
           <a v-bind:href="item.url">
             <div class="box is-radiusless">
-              <span v-anime="{ translateX: [200, 0], delay: anime.random(0, 300) }" class="tag is-pulled-right">{{item.company}}</span>
+              <span v-anime="{ translateX: [200, 0], delay: anime.random(0, 300), scale: [{value: .5, easing: 'easeOutSine', duration: 300}, {value: 1, easing: 'easeInOutSine', duration: 300}] }" class="tag is-pulled-right">{{item.company}}</span>
               <h1 v-anime="{ translateX: [-200, 0], delay: anime.random(0, 300) }" class="title">{{item.title}}</h1>
               <h2 v-anime="{ translateX: [-200, 0], delay: anime.random(0, 300) }" class="subtitle">{{item.location}}</h2>
             </div>
